# idsgrep-emscripten

./: INSTALL  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  assoc.c  bitvec.c  chise2eids  cjkvi-ids.txt  cjkvi2eids  config.h.in  config.tex.in  configure  configure.ac  cook.c  ed22eids  hash.c  idsgrep.1.in  idsgrep.bib  idsgrep.c  idsgrep.h  idsgrep.tex  index.html  index.js  kvg2eids  match.c  mkwcw.c  parse.c  regex.c  unilist.c  userpred.c  widths.txt  widthtab.c
dict/: cjkvi-j.bvec  edict.bvec  kanjivg.bvec  kanjivg.eids
m4/: ax_func_getopt_long.m4  tsu_c_anon_union_struct.m4  tsu_c_gcc_builtin_bswap.m4
test/: andor  anynot  assoc  backslash  basicmatch  bighash  cooked  demorgan  equal  filtcalc  gcov  genbv  kvg-grone  messages  parsedict  regex  spacing  speed  ternbv  truncate  tsu-grone  unilist  unord  userpred  utf8  vgneko
